--- a/composer.json
+++ b/composer.json
@@ -1,24 +1,35 @@
 {
-  "name": "beastbytes/http",
-  "description": "HTTP Service",
-  "keywords": [
-    "http",
-    "yii3"
-  ],
-  "minimum-stability": "dev",
-  "prefer-stable": true,
-  "require": {
-    "php": "^8.0",
-    "psr/http-message": "^1.0",
-    "yiisoft/router-fastroute": "^3.0",
-    "yiisoft/yii-http": "^1.0"
-  },
-  "require-dev": {
-    "roave/security-advisories": "dev-latest"
-  },
-  "autoload": {
-    "psr-4": {
-      "BeastBytes\\Http\\": "src"
+    "name": "beastbytes/yii-http",
+    "description": "HTTP Services",
+    "keywords": [
+        "http",
+        "yii3"
+    ],
+    "minimum-stability": "dev",
+    "prefer-stable": true,
+    "require": {
+        "php": "^8.0",
+        "psr/http-message": "^1.0",
+        "yiisoft/router": "3.0",
+        "yiisoft/yii-http": "^1.0"
+    },
+    "require-dev": {
+        "consolidation/robo": "^4.0",
+        "httpsoft/http-message": "^1.0",
+        "phpunit/phpunit": "^10.0",
+        "roave/infection-static-analysis-plugin": "^1.0",
+        "roave/security-advisories": "dev-latest",
+        "vimeo/psalm": "^5.0",
+        "yiisoft/router-fastroute": "^3.0"
+    },
+    "autoload": {
+        "psr-4": {
+          "BeastBytes\\Yii\\Http\\": "src"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+          "BeastBytes\\Yii\\Http\\Tests\\": "tests"
+        }
     }
-  }
 }
