--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "require": {
         "php": "^8.0",
         "psr/http-message": "^1.0",
-        "yiisoft/router": "4.0",
+        "yiisoft/router": "^3.0|^4.0",
         "yiisoft/yii-http": "^1.0"
     },
     "require-dev": {
